--- a/templates/page.language-of-love.liquid
+++ b/templates/page.language-of-love.liquid
@@ -145,12 +145,12 @@
 
                 <div id="latest-episode" class="group">
 
-                        <img src="{{'episode.jpg' | asset_url}}" alt="Latest episode" />
+                        <img src="{{'episode-2-losing-sammy.jpg' | asset_url}}" alt="Latest episode" />
                         
                         <div class="episode-content">
-                                <h4>Ep 1 - Valentine's Day Blues</h4>
+                                <h4>Ep 2 - Losing Samm‪y‬</h4>
 
-                                <p>In today’s episode, Dr. Berman helps a husband who says his sex life has totally tanked due to the pandemic—between kids and online school and constant togetherness, he says intimacy has fallen by the wayside and his wife feels more like his roommate than his sexual partner. But, first: Dr. Berman gets a voicemail from a woman who is scared that her adult daughter is being pressured into sex by her online boyfriend before she is ready...</p>
+                                <p>Dr. Berman discusses the recent passing of her 16-year-old son Sammy and explains what happened that tragic night, why she decided to share it with the media, and how she has been coping during this whirlwind. </p>
                                 <a href="#" class="btn-brand play-now"><i class="fa fa-play pr5"></i> Play Now</a>
 
 
@@ -165,29 +165,35 @@
                                   <script>a2a_config.icon_color = "#0166ff";</script>
                                 </div>
                 </div>
+                <div id="buzzsprout-player-7918207" style="display:none" class="mt20"></div>
+                <script src="https://www.buzzsprout.com/1672924/7918207-losing-sammy.js?container_id=buzzsprout-player-7918207&player=small" type="text/javascript" charset="utf-8"></script>
+                <!-- <div id="buzzsprout-player-7782385" style="display:none" class="mt20"></div>
+                <script src="https://www.buzzsprout.com/1672924/7782385-valentine-s-day-blues.js?container_id=buzzsprout-player-7782385&amp;player=small" type="text/javascript" charset="utf-8"></script> -->
                 
-                <div id="buzzsprout-player-7782385" style="display:none" class="mt20"></div>
-                <script src="https://www.buzzsprout.com/1672924/7782385-valentine-s-day-blues.js?container_id=buzzsprout-player-7782385&amp;player=small" type="text/javascript" charset="utf-8"></script>
+                <hr />
+
                 
-            <!-- 
-                <div class="section group">
+                <div class="section group recent-episodes">
+
+                  <h3>Recent Episodes</h3>
 
                   <div class="col span_1_of_3">
-                    <img src="{{'episode.jpg' | asset_url}}" alt="Latest episode" />
+                    <img src="{{'episode-1.jpg' | asset_url}}" alt="Latest episode" />
+                      <h4 class="mt20">Ep 1 - Valentine's Day Blues</h4>
+                      <p>In today’s episode, Dr. Berman helps a husband who says his sex life has totally tanked due to the pandemic—between kids and online school and constant togetherness, he says intimacy has fallen by the wayside and his wife feels more like his roommate than his sexual partner. But, first: Dr. Berman gets a voicemail from a woman who is scared that her adult daughter is being pressured into sex by her online boyfriend before she is ready...</p>
+                      <a href="/pages/where-to-listen#ep1" class="btn-small"><i class="fa fa-play pr5"></i> Play Now</a>
+                    
+                  </div>
+
+                  <div class="col span_1_of_3">
 
                   </div>
 
                   <div class="col span_1_of_3">
-                    <img src="{{'episode.jpg' | asset_url}}" alt="Latest episode" />
 
                   </div>
 
-                  <div class="col span_1_of_3">
-                    <img src="{{'episode.jpg' | asset_url}}" alt="Latest episode" />
-
-                  </div>
-
-              </div> -->
+              </div> 
 
 
                 <div id="video" class="section group">
