--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -56,10 +56,15 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+ hr {
+  box-sizing: content-box;
+  height: 0;
+  border: none;
+  overflow: visible;
+  height: 5px;
+  color: #ebebeb;
+  background-color: #ebebeb;
+  margin: 50px 0;
 }
 
 /**
@@ -10488,14 +10493,14 @@ color: #c4be9e !important; }
 
 #linked-area a { font-size: 24px; text-decoration: underline; }
 
-.pb50 { padding-bottom: 50px; }
-.mt20 { margin-top: 20px; } 
-.mt50 { margin-top: 50px; } 
-.mb50 { margin-bottom: 50px; }
-.mt15 { margin-top: 15px; }
-.mb10 { margin-bottom: 10px; }
+.pb50 { padding-bottom: 50px!important; }
+.mt20 { margin-top: 20px!important; } 
+.mt50 { margin-top: 50px!important; } 
+.mb50 { margin-bottom: 50px!important; }
+.mt15 { margin-top: 15px!important; }
+.mb10 { margin-bottom: 10px!important; }
 .mb20 { margin-bottom: 20px!important; }
-.pr5 { padding-right: 5px; }
+.pr5 { padding-right: 5px!important; }
 
 
 .book-list { float: left; margin-left: 18px; }
@@ -10825,6 +10830,22 @@ $font: 'Anton', sans-serif;
 
 }  
 
+.btn-small {
+  font-family: "Anton", sans-serif;
+  color: white !important;
+  text-transform: uppercase;
+  background: #4a398e !important;
+  padding: 10px 15px;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  display: inline-block;
+  border: #4a398e 2px solid;
+  font-weight: 100;
+
+  &:hover { background: transparent!important; color: $podcast-color!important; border: $podcast-color 2px solid; }
+
+
+}
 
 .podcast-logos .btn-brand { padding: 16px 42px!important; }  
 
@@ -10900,6 +10921,14 @@ input#mc-embedded-subscribe { font-family: $font; color: $color-white!important;
 .podcast-list-logos { margin-top: 50px;
 
     img { display: block; margin: 0 auto; }
+
+}
+
+.recent-episodes { 
+  
+    h3 { font-size: 30px!important; margin-bottom: 10px; }
+
+    .col { margin-left: 0%!important; } 
 
 }
 
