--- a/snippets/quote.liquid
+++ b/snippets/quote.liquid
@@ -1,3 +1,16 @@
+<div class="container" id="lol-banner">
+    <div class="item">
+        <span id="lol-logo"></span>
+    </div>
+    <div class="item">
+        <h3>New episodes Every Wednesday!</h3>
+        <h4>Listen to The Language of Love</h4>
+    </div>
+    <div class="item last-item">
+        <a class="btn-inverted" href="/pages/the-language-of-love">Play now!</a>
+    </div>
+</div>
+
 <section class="quote">
 <span class="quotation"></span>
     <p>When you step outside your comfort zone a little bit it can stimulate the dopamine centers of your brain to recreate those feelings of falling in love and increase your libido.</p>
